fix address typo

--- a/templates/personal_account/profile_page.html
+++ b/templates/personal_account/profile_page.html
@@ -117,42 +117,42 @@
         <div class="info-section">
             <div class="info-row">
                 <div class="info-label">Страна:</div>
-                <div class="info-value">{{ user.profile_addres.reg_country }}</div>
+                <div class="info-value">{{ user.profile_address.reg_country }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Регион:</div>
-                <div class="info-value">{{ user.profile_addres.reg_region }}</div>
+                <div class="info-value">{{ user.profile_address.reg_region }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Город:</div>
-                <div class="info-value">{{ user.profile_addres.reg_city }}</div>
+                <div class="info-value">{{ user.profile_address.reg_city }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Полный адрес:</div>
-                <div class="info-value">{{ user.profile_addres.reg_address }}</div>
+                <div class="info-value">{{ user.profile_address.reg_address }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Улица:</div>
-                <div class="info-value">{{ user.profile_addres.reg_street }}</div>
+                <div class="info-value">{{ user.profile_address.reg_street }}</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">Дом:</div>
-                <div class="info-value">{{ user.profile_addres.reg_house }}</div>
+                <div class="info-value">{{ user.profile_address.reg_house }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Квартира:</div>
-                <div class="info-value">{{ user.profile_addres.reg_apartament }}</div>
+                <div class="info-value">{{ user.profile_address.reg_apartament }}</div>
             </div>
 
             <div class="info-row_next">
                 <div class="info-label">Почтовый индекс:</div>
-                <div class="info-value">{{ user.profile_addres.reg_postal_code }}</div>
+                <div class="info-value">{{ user.profile_address.reg_postal_code }}</div>
             </div>
         </div>
 
@@ -162,42 +162,42 @@
         <div class="info-section">
             <div class="info-row">
                 <div class="info-label">Страна:</div>
-                <div class="info-value">{{ user.profile_addres.act_country }}</div>
+                <div class="info-value">{{ user.profile_address.act_country }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Регион:</div>
-                <div class="info-value">{{ user.profile_addres.act_region }}</div>
+                <div class="info-value">{{ user.profile_address.act_region }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Город:</div>
-                <div class="info-value">{{ user.profile_addres.act_city }}</div>
+                <div class="info-value">{{ user.profile_address.act_city }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Полный адрес:</div>
-                <div class="info-value">{{ user.profile_addres.act_address }}</div>
+                <div class="info-value">{{ user.profile_address.act_address }}</div>
             </div>
             
             <div class="info-row">
                 <div class="info-label">Улица:</div>
-                <div class="info-value">{{ user.profile_addres.act_street }}</div>
+                <div class="info-value">{{ user.profile_address.act_street }}</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">Дом:</div>
-                <div class="info-value">{{ user.profile_addres.act_house }}</div>
+                <div class="info-value">{{ user.profile_address.act_house }}</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">Квартира:</div>
-                <div class="info-value">{{ user.profile_addres.act_apartament }}</div>
+                <div class="info-value">{{ user.profile_address.act_apartament }}</div>
             </div>
             
             <div class="info-row_next">
                 <div class="info-label">Почтовый индекс:</div>
-                <div class="info-value">{{ user.profile_addres.act_postal_code }}</div>
+                <div class="info-value">{{ user.profile_address.act_postal_code }}</div>
             </div>
         </div>
         
