--- a/static/css/style.css
+++ b/static/css/style.css
@@ -324,7 +324,7 @@ html, body {
 .submenu-item:hover { background: #e9ecef; }
 
 .messages-container {
-    position: fixed;
+    /* position: fixed; */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
