--- a/templates/personal_account/profile_edit/profile_edit_source_information.html
+++ b/templates/personal_account/profile_edit/profile_edit_source_information.html
@@ -15,6 +15,12 @@
                         {{ form.parther_phone.label_tag }}
                         {{ form.parther_phone }}
                     </div>
+                    <div class="form-group">
+                        {{ form.parther_code.label_tag }}
+                        {{ form.parther_code }}
+                    </div>
+                    <div class="form-group">
+                    </div>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Сохранить</button>
@@ -150,7 +156,7 @@
                 document.execCommand('insertText', false, filteredText);
             });
         }
-    });
+        });
     </script>
 
 {% endblock content %}
